Fixed the gap between the profile basic details and footer

--- a/frontend/src/Components/Footer/Footer.css
+++ b/frontend/src/Components/Footer/Footer.css
@@ -1,5 +1,5 @@
 footer {
     min-height: 12vh;
     background-color: var(--dark);
-    margin-top: 20px;
+    /* margin-top: 20px; */
 }
