--- a/frontend/src/Components/ProfileView/ProfileView.css
+++ b/frontend/src/Components/ProfileView/ProfileView.css
@@ -6,6 +6,7 @@
 
 #photos {
     width: 60%;
+    min-height: 86vh;
 }
 
 .carousel-photo {
